syntax = "proto3";

package vou.proto;

option go_package = "VOU-Server/proto/gen";

message Store {
  string name = 1;
  string owner = 2;
  string business_type = 3;
}